--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.0",
+    "antd": "^6.2.0",
     "enquirer": "^2.4.1",
     "fs-extra": "^11.3.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
+    "react-responsive-pagination": "^2.12.0",
     "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
